force-app/main/default/objects/Quarterly_Score__c/Quarterly_Score__c.object-meta.xml
<CustomObject>
    <label>Quarterly Score</label>
    <pluralLabel>Quarterly Scores</pluralLabel>
    <nameField>
        <label>Quarterly Score Number</label>
        <type>AutoNumber</type>
        <displayFormat>QS-{0000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>