force-app/main/default/objects/Quarterly_Score__c/Fields/Member__c.field-meta.xml
<CustomField>
    <fullName>Member__c</fullName>
    <label>Member</label>
    <type>MasterDetail</type>
    <referenceTo>Member__c</referenceTo>
    <relationshipLabel>Quarterly Scores</relationshipLabel>
    <relationshipName>Quarterly_Scores</relationshipName>
</CustomField>