force-app/main/default/objects/Quarterly_Score__c/Fields/Topper_Reward__c.field-meta.xml
<CustomField>
    <fullName>Topper_Reward__c</fullName>
    <label>Topper Reward</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>