force-app/main/default/objects/Quarterly_Score__c/Fields/Total_Sales_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Sales_Value__c</fullName>
    <label>Total Sales Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>